--- a/amazon_api/amazon/src/css/registration.css
+++ b/amazon_api/amazon/src/css/registration.css
@@ -2,6 +2,10 @@
   margin: 0px;
   padding: 0px;
 }
+#preview{
+  height: 50px;
+  width: 50px;
+}
 
 #form-main-container {
   height: 100vh;
@@ -10,11 +14,12 @@
   align-items: center;
   justify-content: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;;
 }
 
 #form-container {
   max-width: 600px;
-  max-height: 500px;
+  max-height: 600px;
   background-color: white;
   padding: 25px;
   border-radius: 5px;
